--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
     <RelativeLayout
         android:id="@+id/popup_relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/black"
         android:translationZ="10dp"
-        android:visibility="invisible"
-        android:background="@android:color/black">
+        android:visibility="invisible">
 
         <ImageButton
             android:id="@+id/close_imagebutton"
@@ -20,30 +20,30 @@
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_margin="20dp"
-            android:background="@drawable/ic_launcher_background"/>
+            android:background="@drawable/ic_launcher_background" />
 
         <ImageView
             android:id="@+id/popup_imageview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/close_imagebutton"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/show_images_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:translationZ="5dp"/>
+        android:layout_height="wrap_content"
+        android:translationZ="5dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:visibility="gone"
-        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
