--- a/app/src/main/res/layout/activity_photoview.xml
+++ b/app/src/main/res/layout/activity_photoview.xml
@@ -7,7 +7,11 @@
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photoView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_weight="0.35"
+        android:padding="20dp"
+        android:scaleType="fitCenter" />
 
 
 </RelativeLayout>
