добавил по быстрому открывание изображений, кнопку закрыть Сделал простинький реформат кода

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,29 +9,30 @@
     <RelativeLayout
         android:id="@+id/popup_relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@android:color/black"
         android:translationZ="10dp"
         android:visibility="invisible">
+
+        <ImageView
+            android:id="@+id/popup_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:scaleType="fitCenter" />
 
         <ImageButton
             android:id="@+id/close_imagebutton"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:layout_margin="20dp"
-            android:background="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/popup_imageview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/close_imagebutton"
+            android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
-            android:scaleType="fitCenter" />
+            android:background="@drawable/img_108659" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
